[gd_scene load_steps=5 format=3 uid="uid://vejmdrotpwlb"]

[ext_resource type="Script" uid="uid://cmfa6y6qmsnfl" path="res://scripts/UI.gd" id="1_0bbpv"]
[ext_resource type="PackedScene" uid="uid://cskj2fkxqqvvl" path="res://scenes/Authentication.tscn" id="1_elqb8"]
[ext_resource type="PackedScene" uid="uid://bnx58kjq4re1j" path="res://scenes/Leaderboards/Leaderboard.tscn" id="2_rvslj"]
[ext_resource type="PackedScene" uid="uid://bp4uew73bgtli" path="res://scenes/Profile.tscn" id="4_vcsgt"]

[node name="Root" type="Node2D"]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 576.0
script = ExtResource("1_0bbpv")

[node name="Profile" parent="UI" instance=ExtResource("4_vcsgt")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Leaderboard" parent="UI" instance=ExtResource("2_rvslj")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Authentication" parent="UI" instance=ExtResource("1_elqb8")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -64.0
offset_right = 202.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -33.0
offset_right = 57.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Profile" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "Profile"

[node name="Leaderboards" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "Leaderboards"

[node name="Logout" type="Button" parent="UI/Menu/VBoxContainer"]
layout_mode = 2
text = "Logout"

[connection signal="back" from="UI/Profile" to="UI" method="_on_profile_back"]
[connection signal="back" from="UI/Leaderboard" to="UI" method="_on_leaderboard_back"]
[connection signal="login_success" from="UI/Authentication" to="UI" method="_on_authentication_login_success"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/Profile" to="UI" method="_on_profile_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/Leaderboards" to="UI" method="_on_leaderboards_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/Logout" to="UI" method="_on_logout_pressed"]
